# zali-messenger

./: .env.example  .gitignore  .graphifyignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  SERVER_RESTART.md  SERVER_SSH.md  ZaliMessenger_Design_Code_Document.md  ZaliMessenger_Design_System.md  Zali_BrandBook.md  build_app.sh  build_ios_core.sh  build_macos_core.sh  build_macos_rust_app.sh  build_windows_app.ps1  bundle_web.py  run_macos_app.sh  run_macos_rust_app.sh
.claude/: launch.json
.github/workflows/: build-windows.yml
Core/: Cargo.toml
Core/examples/: e2e_core_cli.rs
Core/include/: CoreBridge.h
Core/src/: android_jni.rs  bus.rs  crypto.rs  lib.rs  loader.rs  net.rs
Server/: Cargo.toml
Server/src/: main.rs
Web/: app.js  bridge_protocol.json  index.html  style.css
Web/src/: bootstrap.js  bus.js  interface.js  loader.js  styler.js
Web/src/modules/: api_routes.js  auth.js  bus_events.js  contacts.js  messaging.js  native_types.js  servers.js  voice.js
Windows/: Cargo.toml  build.rs
Windows/src/: main.rs  native.rs
Windows/src/native/: api.rs  cache.rs  http.rs  keyring.rs  messages.rs  transport.rs  util.rs
ZaliArchiverSDK/Rust/: Cargo.toml
ZaliArchiverSDK/Rust/examples/: messenger_attach.rs
ZaliArchiverSDK/Rust/src/: lib.rs
ZaliArchiverSDK/Rust/tests/: archive.rs
ZaliArchiverSDK/Swift/: ZaliArc.swift
ZaliMessenger/.obsidian/: workspace.json
android/: README.md  build_android_core.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/java/org/zalikus/messenger/: MainActivity.kt  ZaliCoreBridge.kt
android/app/src/main/res/values/: colors.xml  strings.xml
apps/android/: README.md  build_android_core.sh  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/org/zalikus/messenger/: MainActivity.kt  NativeBridge.kt  ScreenCaptureService.kt  ZaliCoreBridge.kt
apps/android/app/src/main/res/values/: themes.xml
apps/android/app/src/main/res/xml/: file_paths.xml
apps/ios/: README.md  project.yml
apps/ios/ZaliMessenger/: WebView.swift  ZaliTab.swift
apps/macos/: Package.swift
apps/macos/Sources/ZaliMessenger/: Assets.swift  BridgeProtocol.generated.swift
apps/macos/Sources/ZaliMessenger/Resources/Web/: app.js  index.html  style.css
apps/macos/Sources/ZaliMessenger/Services/: NetworkService.swift  UpdateService.swift
apps/macos/Sources/ZaliMessenger/Views/: WebView.swift
apps/windows/: Cargo.toml  build.rs
apps/windows/installer/: ZaliMessenger.iss
apps/windows/src/: main.rs  native.rs
apps/windows/src/native/: api.rs  messages.rs  taskbar_badge.rs  transport.rs  updates.rs  util.rs
core/: Cargo.toml
core/src/: bus.rs  lib.rs  net.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SERVER_UPDATE.md  UI_VISUAL_SPEC.md  ZaliMessenger_Design_Code_Document.md  ZaliMessenger_Visual_Design.md  windows-build.md
iOS/: README.md  project.yml
iOS/ZaliMessenger/: ContentView.swift  Info.plist  LiquidGlassTabBar.swift  WebView.swift  ZaliApp.swift  ZaliCore.swift
macOS/: Package.swift
macOS/Sources/CoreBridge/include/: module.modulemap
macOS/Sources/ZaliMessenger/: Assets.swift  BridgeProtocol.generated.swift  ContentView.swift  ZaliMessengerApp.swift
macOS/Sources/ZaliMessenger/Resources/Web/: app.js  bridge_protocol.json  index.html  style.css
macOS/Sources/ZaliMessenger/Services/: NativeNotificationService.swift  NetworkService.swift  ZaliCore.swift
macOS/Sources/ZaliMessenger/Views/: WebView.swift
macOS/ZaliMessenger/ZaliMessenger/: Assets.swift  ContentView.swift  CoreBridge.h
macOS/ZaliMessenger/ZaliMessenger/Services/: ZaliArc.swift  ZaliCore.swift
macOS/ZaliMessenger/ZaliMessenger/Views/: WebView.swift
scripts/: bridge_check.sh  build_app.sh  build_ios_core.sh  build_macos_core.sh  build_macos_rust_app.sh  build_web_wasm.sh  build_windows_app.ps1  bundle_web.py  run_macos_app.sh  run_macos_rust_app.sh
sdk/Rust/: Cargo.toml
sdk/Rust/examples/: messenger_attach.rs
sdk/Rust/src/: lib.rs
sdk/Rust/tests/: archive.rs
server/: Cargo.toml
server/examples/: gen_vapid_keys.rs
server/src/: assets.rs  coins.rs  devices.rs  lib.rs  messages.rs  models.rs  push.rs  realtime.rs  roles.rs  servers.rs  storage.rs  updates.rs  util.rs  voice.rs
src/: assets.rs  auth.rs  channels.rs  contacts.rs  devices.rs  lib.rs  main.rs  messages.rs  models.rs  realtime.rs  roles.rs  servers.rs  storage.rs  util.rs  voice.rs
tests/: auth_and_devices.rs  messages_and_realtime.rs  servers_channels_roles.rs
tests/common/: mod.rs
tests/voice_e2e/: README.md  package-lock.json  package.json  voice_call.test.js
web/: app.js  bridge_protocol.json  index.html  manifest.json  service-worker.js
web/src/: bootstrap.js  bus.js  interface.js
web/src/modules/: api_routes.js  bus_events.js  native_types.js  voice.js  wasm_bridge.js
web/src/plugins/: security_shield.js
