[package]
name = "zali_messenger_win"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
wry = "0.35"
tao = { version = "0.24", default-features = false, features = ["rwh_05"] }
zali_messenger_core = { path = "../Core" }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
notify-rust = "4.17"
keyring = "2.3"
windows-sys = { version = "0.61", features = ["Win32_UI_Shell"] }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.12"
# Те же версии, что использует wry 0.35 — новых деревьев зависимостей не добавляют.
objc = "0.2"
block = "0.1"

[build-dependencies]
serde_json = "1.0"

# objc 0.2 macros expand `feature = "cargo-clippy"` checks; declare the value so
# rustc's unexpected_cfgs lint stays useful for our own cfgs without 7 warnings
# per build from a dependency we can't change.
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']
