[package]
name = "zali_messenger_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
zali_sdk = { path = "../sdk/Rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
subtle = "2.6"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
jni = { version = "0.21", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dev-dependencies]
tempfile = "3.27"

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]
android = ["jni"]
