[package]
name = "zali_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "zali_server"
path = "src/lib.rs"

[[bin]]
name = "zali_server"
path = "src/main.rs"

# tests/ lives at the repo root (shared location, predates the server/ move),
# so Cargo's default "tests/ next to Cargo.toml" auto-discovery doesn't see it.
[[test]]
name = "auth_and_devices"
path = "../tests/auth_and_devices.rs"

[[test]]
name = "messages_and_realtime"
path = "../tests/messages_and_realtime.rs"

[[test]]
name = "servers_channels_roles"
path = "../tests/servers_channels_roles.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
dashmap = "5.0"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
rand = "0.8"
web-push = { version = "0.11", default-features = false }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
ct-codecs = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# ece (a web-push dependency) only ships an OpenSSL-backed encryption backend — "vendored"
# builds OpenSSL from source so the VPS doesn't need libssl-dev/pkg-config preinstalled.
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Shell"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
