
[package]
name = "zali_sdk"
version = "1.0.0"
edition = "2021"
description = "Official ZaliArchiver Rust SDK for secure file management."

[dependencies]
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
byteorder = "1.5"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.27.0"

